--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <span class="text-xs" style="color: #00627F;">نسخ</span>
                             </button>
                         </div>
-                        <p class="text-sm break-all" style="color: #00627F;">SA142000002383212779940</p>
+                        <p class="text-sm break-all" style="color: #00627F;">SA1420000002383212779940</p>
 
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">بنك الرياض</h3>
                     </div>
