--- a/index.html
+++ b/index.html
@@ -511,6 +511,12 @@
         copyToClipboard(info);
         showToast('تم نسخ معلومات البطاقة للمشاركة');
     }
+            lucide.createIcons({
+    icons: {
+        'check-circle': document.querySelector('[data-lucide="check-circle"]'),
+        'share-2': document.querySelector('[data-lucide="share-2"]')
+    }
+});
 }
         lucide.createIcons();
         
