--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">مصرف الراجحي</h3>
                     </div>
                 </div>
+                 <!-- زر المشاركة مع أنيميشن -->
+                  <button onclick="shareBankInfoRajhi()" class="w-full mt-3 bg-[#00627F] text-red-950 py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+                     <i data-lucide="share-2" class="w-4 h-4"></i>
+                      <span class="text-xs" style="color: #00627F;">مشاركة</span>                 
+                 </button>
                 <!-- Share Button -->
-<button onclick="shareBankInfoRajhi()" class="copy-btn p-1.5 hover:bg-gray-100 rounded-lg transition-all duration-300 flex items-center gap-1 mt-2 w-full justify-center">
-    <i data-lucide="share-2" class="w-4 h-4" style="color: #00627F;"></i>
-    <span class="text-xs" style="color: #00627F;">مشاركة</span>
-</button>
+
             </div>
 
             <!-- 2. NCB Bank - #004433 -->
