--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
                     </div>
                 </div>
                  <!-- زر المشاركة مع أنيميشن -->
-                  <button onclick="shareBankInfoRajhi()" class="w-full mt-3 bg-[#00627F] text-red-950 py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+                  <button onclick="shareBankInfo()" class="w-full mt-3 bg-[#00627F] text-red-950 py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
                      <i data-lucide="share-2" class="w-4 h-4"></i>
                       <span class="text-xs" style="color: #00627F;">مشاركة</span>                 
                  </button>
-                <!-- Share Button -->
 
             </div>
 
@@ -489,7 +488,7 @@
         }
     </style>
     <script>
-       function shareBankInfoRajhi() {
+       function shareBankInfo() {
         const accountName = 'شركة البريمي للسيارات';
         const accountNumber = '25268400000102';
         const iban = 'SA5110000025268400000102';
