--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">مصرف الراجحي</h3>
                     </div>
                 </div>
-                 <!-- زر المشاركة مع أنيميشن -->
-                  <button onclick="shareBankInfo()" class="w-full mt-3 bg-[#00627F] text-red-950 py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+                 <button onclick="shareBankInfo()" class="w-full mt-3 bg-[#00627F] text-red-950 py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
                      <i data-lucide="share-2" class="w-4 h-4"></i>
-                      <span class="text-xs" style="color: #00627F;">مشاركة</span>                 
+                     <span>مشاركة المعلومات</span>
                  </button>
 
             </div>
