--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">مصرف الراجحي</h3>
                     </div>
                 </div>
-                 <button onclick="shareBankInfo()" class="w-full mt-3 bg-[#00627F] text-red-950 py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
-                     <i data-lucide="share-2" class="w-4 h-4"></i>
-                     <span>مشاركة المعلومات</span>
-                 </button>
+                <!-- زر مشاركة مصرف الراجحي -->
+<button onclick="shareRajhi()" class="w-full mt-3 bg-[#00627F] text-[#00627F] py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+    <i data-lucide="share-2" class="w-4 h-4"></i>
+    <span>مشاركة</span>
+</button>
 
             </div>
 
@@ -105,6 +106,11 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">البنك الأهلي السعودي</h3>
                     </div>
                 </div>
+                <!-- زر مشاركة البنك الأهلي -->
+<button onclick="shareAhli()" class="w-full mt-3 bg-[#00627F] text-[#00627F] py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+    <i data-lucide="share-2" class="w-4 h-4"></i>
+    <span>مشاركة</span>
+</button>
             </div>
 
             <!-- 3. Riyad Bank - #00627F -->
@@ -145,6 +151,11 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">بنك الرياض</h3>
                     </div>
                 </div>
+                <!-- زر مشاركة بنك الرياض -->
+<button onclick="shareRiyad()" class="w-full mt-3 bg-[#00627F] text-[#00627F] py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+    <i data-lucide="share-2" class="w-4 h-4"></i>
+    <span>مشاركة</span>
+</button>
             </div>
 
             <!-- 4. Bank Albilad - #00627F -->
@@ -185,6 +196,11 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">بنك البلاد</h3>
                     </div>
                 </div>
+                <!-- زر مشاركة بنك البلاد -->
+<button onclick="shareBilad()" class="w-full mt-3 bg-[#00627F] text-[#00627F] py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+    <i data-lucide="share-2" class="w-4 h-4"></i>
+    <span>مشاركة</span>
+</button>
             </div>
 
             <!-- 5. Alinma Bank - #00627F -->
@@ -225,6 +241,11 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">مصرف الإنماء</h3>
                     </div>
                 </div>
+                <!-- زر مشاركة مصرف الإنماء -->
+<button onclick="shareInma()" class="w-full mt-3 bg-[#00627F] text-[#00627F] py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+    <i data-lucide="share-2" class="w-4 h-4"></i>
+    <span>مشاركة</span>
+</button>
             </div>
 
             <!-- 6. Saudi French Bank - #00627F -->
@@ -265,6 +286,11 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">البنك السعودي الفرنسي</h3>
                     </div>
                 </div>
+                <!-- زر مشاركة البنك الفرنسي -->
+<button onclick="shareFransi()" class="w-full mt-3 bg-[#00627F] text-[#00627F] py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+    <i data-lucide="share-2" class="w-4 h-4"></i>
+    <span>مشاركة</span>
+</button>
             </div>
 
             <!-- 7. Al Jazira Bank - #00627F -->
@@ -305,6 +331,12 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">بنك الجزيرة</h3>
                     </div>
                 </div>
+                <!-- زر مشاركة بنك الجزيرة -->
+<button onclick="shareJazira()" class="w-full mt-3 bg-[#00627F] text-[#00627F] py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+    <i data-lucide="share-2" class="w-4 h-4"></i>
+    <span>مشاركة</span>
+</button>
+
             </div>
 
             <!-- 8. ANB Bank - #00627F -->
@@ -345,6 +377,11 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">البنك العربي الوطني</h3>
                     </div>
                 </div>
+                <!-- زر مشاركة البنك العربي الوطني -->
+<button onclick="shareAnb()" class="w-full mt-3 bg-[#00627F] text-[#00627F] py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+    <i data-lucide="share-2" class="w-4 h-4"></i>
+    <span>مشاركة</span>
+</button>
             </div>
 
             <!-- 9. Saudi Awwal Bank - #00627F -->
@@ -384,6 +421,11 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">البنك السعودي الأول</h3>
                     </div>
                 </div>
+                <!-- زر مشاركة البنك السعودي الأول -->
+<button onclick="shareSabb()" class="w-full mt-3 bg-[#00627F] text-[#00627F] py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+    <i data-lucide="share-2" class="w-4 h-4"></i>
+    <span>مشاركة</span>
+</button>
             </div>
               <!-- 9. Emirates nbd - #00627F -->
             <div class="bg-white rounded-lg p-4 shadow-sm hover:shadow-md transition-all duration-300">
@@ -422,6 +464,11 @@
                         <h3 class="text-lg font-bold text-center mt-3" style="color: #00627F;">بنك الإأمارات دبي الوطني </h3>
                     </div>
                 </div>
+                <!-- زر مشاركة بنك الإمارات دبي الوطني -->
+<button onclick="shareEmiratesNBD()" class="w-full mt-3 bg-[#00627F] text-[#00627F] py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-[#005266] active:scale-95 transition duration-300 animate-pulse hover:animate-none">
+    <i data-lucide="share-2" class="w-4 h-4"></i>
+    <span>مشاركة</span>
+</button>
             </div>
             <!-- Repeat this card structure for other banks -->
         </div>
@@ -487,23 +534,186 @@
         }
     </style>
     <script>
-       function shareBankInfo() {
-        const accountName = 'شركة البريمي للسيارات';
-        const accountNumber = '25268400000102';
-        const iban = 'SA5110000025268400000102';
-        const bank = 'البنك الأهلي السعودي';
+       function shareRajhi() {
+    const accountName = 'شركة البريمي للسيارات';
+    const accountNumber = '575608010009094';
+    const iban = 'SA8080000575608010000904';
+    const bank = 'مصرف الراجحي';
 
-        const shareData = {
-            title: 'معلومات حساب بنكي',
-            text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
-        };
+    const shareData = {
+        title: 'معلومات حساب بنكي',
+        text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
+    };
 
-        if (navigator.share) {
-            navigator.share(shareData).catch(console.error);
-        } else {
-            alert("المشاركة غير مدعومة في هذا المتصفح.");
-        }
+    if (navigator.share) {
+        navigator.share(shareData).catch(console.error);
+    } else {
+        alert("المشاركة غير مدعومة في هذا المتصفح.");
     }
+}
+
+function shareAhli() {
+    const accountName = 'شركة البريمي للسيارات';
+    const accountNumber = '25268400000102';
+    const iban = 'SA5110000025268400000102';
+    const bank = 'البنك الأهلي السعودي';
+
+    const shareData = {
+        title: 'معلومات حساب بنكي',
+        text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
+    };
+
+    if (navigator.share) {
+        navigator.share(shareData).catch(console.error);
+    } else {
+        alert("المشاركة غير مدعومة في هذا المتصفح.");
+    }
+}
+
+function shareRiyad() {
+    const accountName = 'شركة البريمي للسيارات';
+    const accountNumber = '2383212779940';
+    const iban = 'SA1420000002383212779940';
+    const bank = 'بنك الرياض';
+
+    const shareData = {
+        title: 'معلومات حساب بنكي',
+        text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
+    };
+
+    if (navigator.share) {
+        navigator.share(shareData).catch(console.error);
+    } else {
+        alert("المشاركة غير مدعومة في هذا المتصفح.");
+    }
+}
+
+function shareBilad() {
+    const accountName = 'شركة البريمي للسيارات';
+    const accountNumber = '448888888780008';
+    const iban = 'SA1315000448888888780008';
+    const bank = 'بنك البلاد';
+
+    const shareData = {
+        title: 'معلومات حساب بنكي',
+        text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
+    };
+
+    if (navigator.share) {
+        navigator.share(shareData).catch(console.error);
+    } else {
+        alert("المشاركة غير مدعومة في هذا المتصفح.");
+    }
+}
+
+function shareInma() {
+    const accountName = 'شركة البريمي للسيارات';
+    const accountNumber = '68201863704000';
+    const iban = 'SA9605000068201863704000';
+    const bank = 'مصرف الإنماء';
+
+    const shareData = {
+        title: 'معلومات حساب بنكي',
+        text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
+    };
+
+    if (navigator.share) {
+        navigator.share(shareData).catch(console.error);
+    } else {
+        alert("المشاركة غير مدعومة في هذا المتصفح.");
+    }
+}
+
+function shareFransi() {
+    const accountName = 'شركة البريمي للسيارات';
+    const accountNumber = '97844900167';
+    const iban = 'SA5655000000097844900167';
+    const bank = 'البنك السعودي الفرنسي';
+
+    const shareData = {
+        title: 'معلومات حساب بنكي',
+        text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
+    };
+
+    if (navigator.share) {
+        navigator.share(shareData).catch(console.error);
+    } else {
+        alert("المشاركة غير مدعومة في هذا المتصفح.");
+    }
+}
+
+function shareJazira() {
+    const accountName = 'شركة البريمي للسيارات';
+    const accountNumber = '030495028555001';
+    const iban = 'SA7060100030495028555001';
+    const bank = 'بنك الجزيرة';
+
+    const shareData = {
+        title: 'معلومات حساب بنكي',
+        text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
+    };
+
+    if (navigator.share) {
+        navigator.share(shareData).catch(console.error);
+    } else {
+        alert("المشاركة غير مدعومة في هذا المتصفح.");
+    }
+}
+
+function shareAnb() {
+    const accountName = 'شركة البريمي للسيارات';
+    const accountNumber = '0108095322110019';
+    const iban = '------------';
+    const bank = 'البنك العربي الوطني';
+
+    const shareData = {
+        title: 'معلومات حساب بنكي',
+        text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
+    };
+
+    if (navigator.share) {
+        navigator.share(shareData).catch(console.error);
+    } else {
+        alert("المشاركة غير مدعومة في هذا المتصفح.");
+    }
+}
+
+function shareSabb() {
+    const accountName = 'شركة معرض البريمي للسيارات';
+    const accountNumber = '822173787001';
+    const iban = 'SA6445000000822173787001';
+    const bank = 'البنك السعودي الأول';
+
+    const shareData = {
+        title: 'معلومات حساب بنكي',
+        text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
+    };
+
+    if (navigator.share) {
+        navigator.share(shareData).catch(console.error);
+    } else {
+        alert("المشاركة غير مدعومة في هذا المتصفح.");
+    }
+}
+
+function shareEmiratesNBD() {
+    const accountName = 'شركةالبريمي للسيارات';
+    const accountNumber = '1016050175301';
+    const iban = 'SA4095000001016050175301';
+    const bank = 'بنك الإمارات دبي الوطني';
+
+    const shareData = {
+        title: 'معلومات حساب بنكي',
+        text: `اسم الحساب: ${accountName}\nرقم الحساب: ${accountNumber}\nالآيبان: ${iban}\nالبنك: ${bank}`
+    };
+
+    if (navigator.share) {
+        navigator.share(shareData).catch(console.error);
+    } else {
+        alert("المشاركة غير مدعومة في هذا المتصفح.");
+    }
+}
+
         lucide.createIcons();
         
         function showToast(message) {
